--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "weather-app",
+  "name": "wheather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "convert-units": "^2.3.4",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-weathericons": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
